--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Share/Layout.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Share/Layout.cshtml
@@ -196,7 +196,7 @@
                                                 foreach (Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.CartItem item in list)
                                                 {
                                                     <li>
-                                                        <a href="#" class="remove" title="Remove this item"><i class="fa fa-remove"></i></a>
+                                                        <a href="" onclick="deleteItem(@item.Product.Id_product)" class="remove" title="Remove this item"><i class="fa fa-remove"></i></a>
                                                         <a class="cart-img" href="#"><img src="@item.Product.Url_img_product" alt="#"></a>
                                                         <h4><a href="#">@item.Product.Name_product</a></h4>
                                                         <p class="quantity">
@@ -205,7 +205,7 @@
                                                         </p>
                                                     </li>
                                                 }
-                                                                }
+                                            }
                                         }
 
 
@@ -213,7 +213,7 @@
                                     <div class="bottom text-center">
                                         <div class="total">
                                             <span>Tổng cộng</span>
-                                            <span class="total-amount">@string.Format("{0:0,0 vnđ}",total)</span>
+                                            <span class="total-amount">@string.Format("{0:0,0 vnđ}", total)</span>
                                         </div>
                                         <a href="/Checkout/Checkout" class="btn">Thanh toán</a>
                                     </div>
@@ -447,5 +447,6 @@
     <script src='@Url.Content("~/Scripts/jquery-1.8.2.js")' type='text/javascript'></script>
     <script src='@Url.Content("~/Scripts/jquery.validate.js")' type='text/javascript'></script>
     <script src='@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")' type='text/javascript'></script>
+    <script src="~/Assets/shop/js/add-item-cart.js"></script>
 </body>
 </html>
