sua lai phan login

--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/ConfirmPassword.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/ConfirmPassword.cshtml
@@ -46,8 +46,8 @@
 
                         <button class="next w-100 mb-3">Xác nhận</button>
                         <span class="shotcut">
-                            <a class="mr-3">Đăng nhập?</a>
-                            <a href="register.html">Đăng ký?</a>
+                            <a class="mr-3" href="/Account/Login">Đăng nhập</a>
+                            <a href="/Account/Register">Đăng ký?</a>
                         </span>
                     }
                     @*<form class="m-0 p-5 text-center">
