--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/ForgotPassword.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.ForgotPassCustomerModel
+
 @{
     ViewBag.Title = "Forgot Password";
     Layout = "~/Views/Share/LayoutLogin.cshtml";
@@ -12,15 +13,29 @@
             </div>
             <div class="col-lg-5 col-md-5 col-12">
                 <div class="h-100 d-flex align-items-center">
-                    <form class="m-0 p-5 text-center" action="confirm-pass.html">
+                    @using (Html.BeginForm("forgotPasswordCustomer", "Account", FormMethod.Post,
+                        new { @class = "m-0 p-5 text-center" }))
+                    {
+                        @*<form class="m-0 p-5 text-center" action="">*@
                         <h5 class="mb-4">Quên Mật Khẩu</h5>
-                        <input class="w-100 mb-4" type="username" placeholder="Email">
+                        @Html.ValidationMessage("", new { @class = "text-danger notification-error" });
+                        @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger notification-error" })
+                        @Html.TextBoxFor(model => model.email, new
+
+                   {
+                       @class = "w-100 mb-4 input-login-field",
+                       @autofocus = "autofocus",
+                       @placeholder = "Email",
+                       @type = "email"
+                   })
+                        @*<input class="w-100 mb-4" type="username" placeholder="Email">*@
                         <button type="submit" class="next w-100 mb-3">Xác nhận</button>
                         <span class="shotcut">
                             <a class="mr-3" href="/Account/Login">Đăng nhập?</a>
                             <a href="/Account/Register">Đăng ký?</a>
                         </span>
-                    </form>
+                        @*</form>*@
+                    }
                 </div>
             </div>
         </div>
