--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/News/News.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/News/News.cshtml
@@ -1,161 +1,24 @@
-﻿
+﻿@using Model.entity;
 @{
     ViewBag.Title = "News";
     Layout = "~/Views/Share/Layout.cshtml";
+    var baiviet =(News) ViewBag.BaiViet;
 }
 
 <div class="breadcrumbs py-4">
     <div class="container text-left">
         <ul class="bread-list d-inline-block">
-            <li class="d-inline-block text-capitalize"><a href="index.html">Trang chủ<i class="ti-arrow-right mx-2"></i></a></li>
-            <li class="d-inline-block text-capitalize"><a href="blog.html">Tin tức</a></li>
+            <li class="d-inline-block text-capitalize"><a href="/Home/Index">Trang chủ<i class="ti-arrow-right mx-2"></i></a></li>
+            <li class="d-inline-block text-capitalize"><a href="/News/News">Tin tức</a></li>
         </ul>
     </div>
 </div>
 <section class="blog-single">
     <div class="container">
-        <div class="row">
+        <div class="row">   
             <div class="col-lg-8 col-12">
-                <div class="blog-single-main mt-4 bg-white">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="image position-relative">
-                                <img src="../images/tin_tuc/blog-img-950x460.jpg" alt="#">
-                            </div>
-                            <div class="blog-detail">
-                                <h2 class="blog-title">Giảm Giá Sâu Cho Đơn Hàng Hóa Chất Merck Và Sigma Aldrich.</h2>
-                                <div class="blog-meta">
-                                    <span class="author"><a href="#" class="pl-0"><i class="fa fa-user"></i>Bởi Admin</a><a href="#"><i class="fa fa-calendar"></i>Ngày 24/12/2022</a><a href="#" class="pr-0 border-0"><i class="fa fa-comments"></i>Bình luận (15)</a></span>
-                                </div>
-                                <div class="content">
-                                    <p>
-                                        Từ ngày 20/9 - 20/10, Lab Chemicals giảm giá sâu cho đơn
-                                        hàng hóa chất Merck hoặc Sigma Aldrich được nhập khẩu từ Mỹ, áp dụng như sau:
-                                    </p>
-                                    <blockquote>
-                                        <i class="fa fa-quote-left"></i> Thời sự Thứ bảy,
-                                        14/3/2020 15:17, BẾN TRE - 700 bao nylon chứa
-                                        chất lỏng màu đen, đặc sệt, mùi hôi như nhựa đường trôi
-                                        dạt vào bờ biển Bình Đại đang được thu gom. Chiều 13/3,
-                                        người dân xã Thừa Đức, Thới Thuận lúc đi đánh cá, phát
-                                        hiện hàng trăm bao tải màu đen, bị sóng đánh dạt vào bãi
-                                        biển nằm rải rác hàng chục cây số, nên trình báo chính
-                                        quyền địa phương.
-                                    </blockquote>
-                                    <p>
-                                        Ông Võ Văn Quân, Phó chủ tịch UBND huyện Bình Đại cho
-                                        biết, do một số túi đã bị rách, hóa chất tràn ra ngoài,
-                                        có mùi hôi giống dầu. "Chất này nhiều khả năng là dầu
-                                        thô hoặc nhựa đường, tổng cộng 700 bao, mỗi bao nặng 25
-                                        kg, đã được thu gom", ông Quân nói.
-                                    </p>
-                                    <p class="m-0">
-                                        Do trên địa bàn có nhiều diện tích nuôi nghêu, lo ngại
-                                        bị ảnh hưởng, hiện chính quyền địa phương đã trình báo
-                                        Sở Tài nguyên và Môi trường tỉnh lấy mẫu xét nghiệm xem
-                                        là chất gì, để có hướng xử lý thích hợp.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="share-social">
-                                <div class="content-tags position-relative mt-4">
-                                    <h4>Tags:</h4>
-                                    <ul class="tag-inner">
-                                        <li><a href="#">thủy tinh</a></li>
-                                        <li><a href="#">thực vật</a></li>
-                                        <li><a href="#">acid</a></li>
-                                        <li class="mr-0 mb-0"><a href="#">nước</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="comments mt-4">
-                                <h3 class="comment-title">Bình luận (3)</h3>
-
-                                <!-- Single Comment -->
-                                <div class="single-comment">
-                                    <img src="../images/nguoi_dung/user_02_80x80.jpg" alt="#">
-                                    <div class="content">
-                                        <h4>Nguyễn Thành Trung <span>Vào lúc 8:59 ngày 28/2/2018</span></h4>
-                                        <p>
-                                            Đây chưa chắc là nhựa đường, mà là dầu F.O chạy tàu
-                                            thủy vệ sinh các két dầu xử lý trên cạn rất tốn kém
-                                            nên mang ra biển thả. Điều tra đc cần chế tài mạnh mẽ
-                                            truy tố hình sự mấy tội cố ý làm ô nhiễm môi trường.
-                                        </p>
-                                    </div>
-                                </div>
-
-                                <!-- Single Comment -->
-                                <div class="single-comment">
-                                    <img src="../images/nguoi_dung/user_01_80x80.jpg" alt="#">
-                                    <div class="content">
-                                        <h4>Lê Thị Trâm Anh <span>Vào lúc 8:59 ngày 28/2/2018</span></h4>
-                                        <p>
-                                            Công nghệ sản xuất lạc hậu, không có công nghệ xử lý
-                                            chất thải độc hại hoặc chi phí xử lý quá đắt nên họ
-                                            thải ra biển. Thật đáng báo động khi Kiểm soát môi
-                                            trường quá lỏng lẻo. Chúng ta không thể đánh đổi phát
-                                            triển kinh tế lấy môi trường theo kiểu này!
-                                        </p>
-                                    </div>
-                                </div>
-
-                                <!-- Single Comment -->
-                                <div class="single-comment">
-                                    <img src="../images/nguoi_dung/user_03_80x80.png" alt="#">
-                                    <div class="content">
-                                        <h4>Phan Tâm Như <span>Vào lúc 8:59 ngày 28/2/2018</span></h4>
-                                        <p>
-                                            Nhựa đường đó rồi. Nhìn là biết rồi. Vấn đề là ai thả
-                                            ra biển, sao họ ko bán, vừa kiếm tiền mà vừa có nhựa
-                                            làm đường cho bà con đi.
-                                        </p>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="reply">
-                                <div class="reply-head">
-                                    <h2 class="reply-title">Để lại bình luận</h2>
-                                    <!-- Comment Form -->
-                                    <form class="form" action="#">
-                                        <div class="row">
-                                            <div class="col-lg-6 col-md-6 col-12">
-                                                <div class="form-group mb-4">
-                                                    <label>Họ và tên<span>*</span></label>
-                                                    <input type="text" name="name" placeholder="" required="required">
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6 col-md-6 col-12">
-                                                <div class="form-group mb-4">
-                                                    <label>Email<span>*</span></label>
-                                                    <input type="email" name="email" placeholder="" required="required">
-                                                </div>
-                                            </div>
-                                            <div class="col-12">
-                                                <div class="form-group mb-4">
-                                                    <label>Bình luận<span>*</span></label>
-                                                    <textarea name="message" placeholder=""></textarea>
-                                                </div>
-                                            </div>
-                                            <div class="col-12">
-                                                <div class="form-group button text-left mb-0">
-                                                    <button type="submit" class="btn">
-                                                        Đăng bình luận
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                @*<div class="row"><p style="font-weight:bold">@baiviet.Title</p></div>*@
+                <div class="row">@Html.Raw(baiviet.Content)</div>
             </div>
             <div class="col-lg-4 col-12">
                 <div class="main-sidebar mt-4">
