--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Assets/shop/css/custom.css
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Assets/shop/css/custom.css
@@ -6,7 +6,8 @@
 }
 img.custom-image-product {
     width: 100%;
-    height: 600px;
+    height: 520px;
+    object-fit:scale-down;
 }
 .hero-slider .single-slider {
     background-image: url('../images/labs/lab_01.jpg') !important;
