--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/News/News.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/News/News.cshtml
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row">   
             <div class="col-lg-8 col-12">
-                @*<div class="row"><p style="font-weight:bold">@baiviet.Title</p></div>*@
+                <div class="row"><p style="font-weight:bold">@baiviet.Title</p></div>
                 <div class="row">@Html.Raw(baiviet.Content)</div>
             </div>
             <div class="col-lg-4 col-12">
