--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Cart/ShoppingCart.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Cart/ShoppingCart.cshtml
@@ -4,7 +4,7 @@
 }
 @{
     int total = 0;
-    var list = (List<Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.CartItem>)Session["CartSession"];
+    var list = (List<Model.entity.CartItem>)Session["CartSession"];
 } 
 
 <div class="breadcrumbs py-4">
@@ -35,19 +35,19 @@
                 @{
                     if (list == null)
                     {
-                        <h1>Ko co gi</h1>
+                      
                     }
                     else
                     {
-                        foreach (Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Models.CartItem item in list)
+                        foreach (Model.entity.CartItem item in list)
                         {
                             <tr>
                                 <td class="image" data-title="No">
-                                    <img src="@item.Product.Url_img_product" width=50px height=50px alt="#">
+                                    <img src="@item.Product.Url_img_product" style="width=50px height=50px"  alt="#">
                                 </td>
                                 <td class="product-des" data-title="Description">
                                     <p class="product-name">
-                                        <a href="product-details.html">@item.Product.Name_product</a>
+                                        <a href="@Url.Action("ProductDetails", "Products", new {id = item.Product.Id_product})">@item.Product.Name_product</a>
                                     </p>
                                     <p class="product-des">
                                         @item.Product.Desc_product
@@ -60,13 +60,13 @@
                                     <!-- Input Order -->
                                     <div class="input-group">
                                         <div class="button minus">
-                                            <button type="button" class="btn btn-primary btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
+                                            <button type="button" class="btn btn-primary btn-number" disabled="disabled" data-type="minus" data-field="quant[@item.Product.Id_product]" onclick="minus(@item.Product.Id_product])">
                                                 <i class="ti-minus"></i>
                                             </button>
                                         </div>
-                                        <input type="text" name="quant[1]" class="input-number" data-min="1" data-max="100" value="@item.Quantity">
+                                        <input type="text" name="quant[@item.Product.Id_product]" class="input-number" data-min="1" data-max="100" value="@item.Quantity">
                                         <div class="button plus">
-                                            <button type="button" class="btn btn-primary btn-number" data-type="plus" data-field="quant[1]">
+                                            <button type="button" class="btn btn-primary btn-number" data-type="plus" data-field="quant[@item.Product.Id_product]" onclick="addItem(@item.Product.Id_product)">
                                                 <i class="ti-plus"></i>
                                             </button>
                                         </div>
