--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Cart/ShoppingCart.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Cart/ShoppingCart.cshtml
@@ -60,13 +60,13 @@
                                     <!-- Input Order -->
                                     <div class="input-group">
                                         <div class="button minus">
-                                            <button type="button" class="btn btn-primary btn-number" disabled="disabled" data-type="minus" data-field="quant[@item.Product.Id_product]" onclick="minus(@item.Product.Id_product])">
+                                            <button type="button" class="btn btn-primary btn-number" data-type="minus" data-field="quant[@item.Product.Id_product]" onclick="minus(@item.Product.Id_product);window.location.reload()">
                                                 <i class="ti-minus"></i>
                                             </button>
                                         </div>
-                                        <input type="text" name="quant[@item.Product.Id_product]" class="input-number" data-min="1" data-max="100" value="@item.Quantity">
+                                        <input type="text" name="quant[@item.Product.Id_product]" class="input-number" data-min="1" data-max="@item.Product.Quantity_product" value="@item.Quantity">
                                         <div class="button plus">
-                                            <button type="button" class="btn btn-primary btn-number" data-type="plus" data-field="quant[@item.Product.Id_product]" onclick="addItem(@item.Product.Id_product)">
+                                            <button type="button" class="btn btn-primary btn-number" data-type="plus" data-field="quant[@item.Product.Id_product]" onclick="addItem(@item.Product.Id_product);window.location.reload()">
                                                 <i class="ti-plus"></i>
                                             </button>
                                         </div>
