--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Cart/ShoppingCart.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Cart/ShoppingCart.cshtml
@@ -42,8 +42,8 @@
                         foreach (Model.entity.CartItem item in list)
                         {
                             <tr>
-                                <td class="image" data-title="No">
-                                    <img src="@item.Product.Url_img_product" style="width=50px height=50px"  alt="#">
+                                <td class="image" data-title="No" style="padding: 15px">
+                                    <img src="@item.Product.Url_img_product" style="width:50px; height:50px;"  alt="#">
                                 </td>
                                 <td class="product-des" data-title="Description">
                                     <p class="product-name">
